fix(overflow): fix screen overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@tailwind utilities;
+
+html,body{
+  @apply m-0 p-0 w-full overflow-x-hidden
+}
 
 @custom-variant dark (&:is(.dark *));
 
